--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello HTML</h1>
-    <img src="img/layout.png" alt="plan">
+    <img src="img/layout.jpg" alt="plan">
 </body>
 </html>
