--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HTML Page</title>
 </head>
 <body>
-    <h1>Hello HTML</h1>
+    <h1>Hello HTML!</h1>
     <img src="img/layout.jpg" alt="plan">
 </body>
 </html>
